Fixing toggle dark mode btn

--- a/styles/home.css
+++ b/styles/home.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: hidden;
   }
   
 .home{
@@ -15,9 +16,7 @@ body {
   width: 100%;
   background: url("../images/homeDarkMode.svg") ;
   background-size: cover ;
-  background-repeat: no-repeat;
-
-  
+  background-repeat: no-repeat; 
 }
 
 .title{
@@ -39,109 +38,74 @@ body {
 }
 
 
-  .dark-mode {
-    background-color: black;
-    color: white;
-  }
-  
-  .theme-switch input {
-    display:none;
-  }
-  
-  .slider {
-    background-color: rgb(156, 229, 252);
-    bottom: 0;
-    cursor: pointer;
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    transition: .4s;
-    width: 60px;
-    height: 32px;
-  
-  }
-  
-  .slider:before {
-    background-color: #fff;
-    bottom: 4px;
-    content: "";
-    height: 26px;
-    left: 4px;
-    position: absolute;
-    transition: .4s;
-    width: 26px;
-  }
-  
-  .theme-switch-wrapper{
-    display: flex;
-    margin-top: 20px;
-  }
-  
-  input:checked + .slider {
-    background-color: #e79653;
-  }
-  
-  input:checked + .slider:before {
-    transform: translateX(26px);
-  }
-  
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
-  
-  .luneimg {
-    width: 30px;
-    position: absolute;
-    top: 0;
-    left: 70px;
-  }
-
-  .icon-scroll,
-.icon-scroll:before {
-    position: absolute;
-    left: 50%
-}
-.icon-scroll {
-    width: 30px;
-    height: 50px;
-    margin-left: -20px;
-    bottom: 10px;
-    margin-top: -35px;
-    border: 2px solid #fff;
-    border-radius: 25px
-}
-@media (max-width: 767px) {
-    .icon-scroll {
-        position: relative
-    }
-}
-.icon-scroll:before {
-    content: '';
-    width: 8px;
-    height: 8px;
-    background: #fff;
-    margin-left: -4px;
-    top: 8px;
-    border-radius: 4px;
-    animation-duration: 1.5s;
-    animation-iteration-count: infinite;
-    animation-name: scroll
-}
-@keyframes scroll {
-    0% {
-        opacity: 1
-    }
-    100% {
-        opacity: 0;
-        transform: translateY(26px)
-    }
+.switch {
+  display: flex;
+  height: 36px;
+  position: relative;
+  width: 75px;
 }
 
+.switch input {
+  display:none;
+}
+
+.slider {
+  background-color: #FFF;
+  border:1px solid #000;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: .4s;
+}
+
+.slider:before {
+  background-color: #333;
+  border:1px solid #000;
+  bottom: 3px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: .4s;
+  width: 26px;
+  z-index:421;
+}
+
+input:checked + .slider {
+  background-color: #101211;
+}
+
+input:checked + .slider:before {
+  transform: translateX(34px);
+  border-color:#CFCFCF;
+  background-color:#EFEFEF;
+}
+
+.slider.round {
+  border-radius: 35px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.toggle-moon, .toggle-sun {
+  width:50%;
+  position:relative;
+  z-index:420;
+}
+
+.toggle-moon{
+  padding-left: 2.5px;
+}
+.toggling{
+  position: absolute;
+  right: 2%;
+  top: 2%;
+}
 /*Section 1; concept du jeu*/
 
 .section1 {
@@ -188,7 +152,7 @@ h3 {
 } 
 
 p{
-  font-family: 'Julius Sans One', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: lighter;
 
 }
